src/test/deca/context/invalid/oracle/access_field_other_class.deca
class A {
    int a = 0;
}

class B extends A {
    int b = 0;
}

{
    A object_a = new B();
    print(object_a.a, object_a.b);
}